<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="xmlName">faces.xml</string>
    <string name="email">oeparentalcontrol@gmail.com</string>
    <string name="email_password">p4r3nt4lc0ntr0l</string>
    <string name="subject">Elfelejtett jelszó</string>
    <string name="email_text">Parental Control alkalmazáshoz genereált új jelszava: </string>
    <string name="email_sent">Új jelszó e-mailben elküldve!</string>
    <string name="email_send_fail">Nincs internetkapcsolat, az új jelszó nem küldhető el!</string>
    <string name="SHAREDPREFERENCE_SETTINGS">settings</string>
    <string name="SHAREDPREFERENCE_FACE_REG_ENABLED">faceRegEnabled</string>
    <string name="SHAREDPREFERENCE_SERVICE_ENABLED">serviceEnabled</string>
    <string name="SHAREDPREFERENCE_PACKAGES">apps</string>
    <string name="SHAREDPREFERENCE_PERSONS">persons</string>
    <string name="SHAREDPREFERENCE_PASSWORD">password</string>
    <string name="SHAREDPREFERENCE_URL_ENABLED">urlEnabled</string>
    <string name="SHAREDPREFERENCE_URLS">urls</string>
    <string name="SHAREDPREFERENCE_ACCESS_CONTROL_FOR_PERSON">accessControlForPerson</string>
    <string name="SHAREDPREFERENCE_ACCESS_CONTROL_ENABLED">accessControlEnabled</string>
    <string name="SHAREDPREFERENCE_TIME_FROM">timeFrom</string>
    <string name="SHAREDPREFERENCE_TIME_TO">timeTo</string>
    <string name="SHAREDPREFERENCE_SELECTED_DAYS">selectedDays</string>
    <string name="SHAREDPREFERENCE_EMAIL">email</string>
    <string name="EXTRA_FACE_REG_ENABLED">hu.uniobuda.nik.extra.FACE_REG_ENABLED</string>
    <string name="EXTRA_PACKAGE_NAME">hu.uniobuda.nik.extra.PACKAGE_NAME</string>
    <string name="EXTRA_PERSON_NAME">hu.uniobuda.nik.extra.PERSON_NAME</string>
    <string name="EXTRA_ACCESS_CONTROL">hu.uniobuda.nik.extra.ACCESS_CONTROL</string>
    <string name="EXTRA_DISABLE_REQUEST">hu.uniobuda.nik.extra.DISABLE_REQUEST</string>
    <string name="BROADCAST_NEW_APP_STARTED">hu.uniobuda.nik.parentalcontrol.NEW_APP_STARTED</string>
    <string name="BROADCAST_REFRESH_SERVICE_HASHTABLE">hu.uniobuda.nik.parentalcontrol.REFRESH_SERVICE_HASHTABLE</string>
    <string name="BROADCAST_REFRESH_MAIN_HASHTABLE">hu.uniobuda.nik.parentalcontrol.REFRESH_MAIN_HASHTABLE</string>
    <string name="BROADCAST_SET_PACKAGE_FALSE">hu.uniobuda.nik.parentalcontrol.SET_PACKAGE_FALSE</string>
    <string name="BROADCAST_UNLOCK">hu.uniobuda.nik.extra.UNLOCK</string>
    <string name="noFrontCamera">NO_FRONT_CAMREA_AVAILABLE</string>
    <string name="monday">hétfő</string>
    <string name="tuesday">kedd</string>
    <string name="wednesday">szerda</string>
    <string name="thursday">csütörtök</string>
    <string name="friday">péntek</string>
    <string name="saturday">szombat</string>
    <string name="sunday">vasárnap</string>
    <string name="app_name">ParentalControl</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="startService">Szolgáltatás indítása</string>
    <string name="stopService">Szolgáltatás leállítása</string>
    <string name="settings">Beállítások</string>
    <string name="setNewPerson">Új személy felvétele</string>
    <string name="help">Segítség</string>
    <string name="isNotRunning">A szolgáltatás nem fut!</string>
    <string name="isRunning">A szolgáltatás fut!</string>
    <string name="from">METTŐL</string>
    <string name="to">MEDDIG</string>
    <string name="back">Vissza</string>
    <string name="save">Mentés</string>
    <string name="cancel">Mégse</string>
    <string name="delete">Törlés</string>
    <string name="add">Hozzáadás</string>
    <string name="pleaseWait">Kérem várjon...</string>
    <string name="loadingApps">Telepített alkalmazások betöltése...</string>
    <string name="working">Feldolgozás folyamatban...</string>
    <string name="learning">Tanulás folyamatban...</string>
    <string name="all">minden gyermek</string>
    <string name="deleting">Törlés...</string>
    <string name="selectApps">Tiltandó alkalmazások kiválasztása</string>
    <string name="newPersonInfo">Új személy felvételéhez több fényképre van szükség, amely alapján a program meg tudja tanulni az adott személy jellemző vonásait. Ehhez 5 kép fog készülni.</string>
    <string name="failTitle">Hiba</string>
    <string name="cameraFailMessage">Készüléke nem rendelkezik előlapi kamerával, ezért az arc azonosítás funkció nem elérhető!</string>
    <string name="nameFailMessage">Kérem adja meg a felveendő szeméyl nevét!</string>
    <string name="capture">Kép készítése</string>
    <string name="nameLabel">Írja be a nevet:</string>
    <string name="faceNotFound">Nem található arc a képen, kérem készítsen új képet!</string>
    <string name="moreFaces">A képen több arc található, készítsen olyan képet, amelyen csak egy van!</string>
    <string name="facePredicted">Ez az arc egy már felvett személyhez tartozik!</string>
    <string name="nameExistMessage">Már van ilyen néven felvett személy!</string>
    <string name="title_activity_check_person">CheckPersonActivity</string>
    <string name="checkLabel">Tartsa az arca előtt a készüléket, néhány másodperc múlva egy fotó készül róla!</string>
    <string name="URLSettings">URL blokkolás beállítása</string>
    <string name="nonRooted">A készülék nincs root-olva!</string>
    <string name="isRooted">A készülék root-olva van!</string>
    <string name="rec_title">Azonosítás</string>
    <string name="url_add_title">URL hozzáadása</string>
    <string name="url_add_message">Írja be a tiltandó URL címet:</string>
    <string name="url_title">URL blokkolás</string>
    <string name="url_custom_title">URL megadása és törlése</string>
    <string name="url_isOn">URL blokkolás bekapcsolása</string>
    <string name="urlDisabled">Az URL blokkolás funkció nincs bekapcsolva!</string>
    <string name="rootFailed">Az Ön készüléke valószínűleg nem root-olt, az URL blokkolás csak root-olt készülékeken használható!</string>
    <string name="usageStatsMustEnabled">A program helyes működéséhez engedélyeznie kell a használati statiszikákta a Parental Control számára!</string>
    <string name="childSettings">beállításai</string>
    <string name="adminFailure">Az eszközkezelő funkció nélkül a szolgáltatás nem működik, kérem kapcsolja be!</string>
    <string name="askResetPassword">Biztosan új jelszót szeretne generálni?\n
    Az új jelszó elküldéséhez internetkapcsolat szükséges+</string>
    <string name="deviceAccess_isEnabled">Készülék-hozzáférés korlátozása</string>
    <string name="deviceAccess_persons">Korlátozandó személyek beállításai</string>
    <string name="deletePerson">Felvett személy törlése</string>
    <string name="deleteAlert">Törlés megerősítése</string>
    <string name="deleteMessage">Biztosan törli a személyt?</string>
    <string name="isParentLabel">A felvenni kívánt személy szülő:</string>
    <string name="newPassword">Mesterjelszó megadása</string>
    <string name="newPw">Új jelszó:</string>
    <string name="getPw">Jelszó megadása:</string>
    <string name="pwConfirm">Jelszó megerősítése:</string>
    <string name="email_address">E-mail cím megadása:</string>
    <string name="passwordFailMessage">A beírt jelszavak nem egyeznek!</string>
    <string name="emailFailMessage">Hibás e-mail címet adott meg!</string>
    <string name="incorrectPassword">Hibás jelszó, hozzáférés megtagadva!</string>
    <string name="noPassword">Írjon be egy jelszót!</string>
    <string name="passwordChanged">A jelszót sikeresen megváltoztatta</string>
    <string name="noPasswordSet">Amígy nincs jelszó beállítva, nem használhatja a szolgáltatást!</string>
    <string name="shortPassword">A beírt jelszó túl rövid!</string>
    <string name="adminSetFailed">A eszközkezelő aktiválása sikertelen volt!</string>
    <string name="adminSetOK">A eszközkezelő aktiválása sikeres volt!</string>
    <string name="basic_title">Általános beállítások</string>
    <string name="childDenied">Gyermek hozzáférése blokkolva: </string>
    <string name="accessAllowed">Hozzáférés engedélyezve: </string>
    <string name="recognitionFailMessage">Az arc azonosítása nem sikerült, kérem készítsen új képet!</string>
    <string name="passwordRequest">Az arc azonosítása háromszor nem sikerült, kérem adja meg a mesterjelszót!</string>
    <string name="OK">Rendben</string>
    <string name="followingPersonSettings">A következő személy beállításai:</string>
    <string name="personAccessControlIsEnabled">Korlátozás bekapcsolva a személy számára:</string>
    <string name="selectDays">Napok kiválasztása</string>
    <string name="help_main_screen_text">Köszönöm, hogy kipróbálja az alkalmazásomat!</string>
    <string name="help_main_screen_text2">A Parental Control applikáció segítségével lehetősége nyílik a kiválasztott alkalmazások elindítását és a készülék
    feloldását azonosításhoz kötni. Amennyiben a készülék rendelkezik előlapi kamerával, mindez arc alapján történik, ellenkező esetben jelszó segítségével. Ezen felül
    a program képes megadott URL címek tiltására is.\n
    A szolgáltatás működéséhez szükséges, hogy a program eszközkezelőként engedélyezve legyen - amennyiben ez még nem történt meg, úgy a szolgáltatás indításakor
    figyelmeztet a program.</string>
    <string name="help_main_screen_text3">A program használatához mindenképp meg kell adnia egy mesterjelszót, mely segítségével feloldhatja a blokkolást, abban
    az esetben is, ha az arc alapú azonosítás nem volt sikeres!</string>
    <string name="help_main_screen_text4">A védelmi funkciók mindegyike csak akkor működik, ha elindította a szolgáltatást, amelyet a főképernyő
    ""Szolgáltatás indítása"" gombbal tehet meg, és addig aktív, amíg ugyanezen gomb segítségével le nem állította!</string>
    <string name="help_person_text">A Beállítások->Új személy felvétele menüpont alatt lehetséges új személy megadása az arc alapú azonosításhoz.
    Először meg kell adni a személy nevét (egy nevet csak egyszer lehet felvenni), valamint hogy a felvenni kívánt személy szülő-e.</string>
    <string name="help_person_text2">Az a személy, aki szülőként lett felvéve, engedélyezett minden korlátozás feloldására!</string>
    <string name="help_person_text3">Az adatok megadása után az Új személy felvétele gombra kattintva kezdheti meg a fényképek elkészítését. 5 képet kell készíteni, a kép
    készítése gombra kattintva, ezután a program megtanulja az adott arc vonásait.</string>
    <string name="help_person_text4">Ajánlott, hogy a hétköznapokban előforduló, különböző mimikákat használjunk (pl. mosoly) valamint jó fényviszonyok közt készíteni a képeket,
    hogy az arc alapú azonosítás nagyobb eséllyel legyen sikeres!</string>
    <string name="help_person_text5">Egy felvett személy törölhető a Beállítások->Felvett személy törlése menüpont alatt, a személy nevére koppintva.</string>
    <string name="help_person_text6">Az a személy, aki nincs felvéve, nem ismeri program, tehát nem jogosult a tiltások feloldására!</string>
</resources>