<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="hu.uniobuda.nik.parentalcontrol.fragments.HelpScreenFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_person_text"
            android:id="@+id/help_person_text"
            android:layout_gravity="center|top"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/help_person_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_person_text2"
            android:layout_gravity="center"
            android:layout_below="@+id/help_person_text"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_person_text3"
            android:id="@+id/help_person_text3"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_below="@+id/help_person_text2"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_person_text4"
            android:id="@+id/help_person_text4"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_below="@+id/help_person_text3"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_person_text5"
            android:id="@+id/help_person_text5"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_below="@+id/help_person_text4"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_person_text6"
            android:id="@+id/help_person_text6"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_below="@+id/help_person_text5"
            android:layout_marginTop="20dp" />
    </RelativeLayout>
</ScrollView>