<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="hu.uniobuda.nik.parentalcontrol.fragments.HelpScreenFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_main_screen_text"
            android:id="@+id/help_main_screen_title"
            android:layout_gravity="center|top"
            android:textStyle="bold"

            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/help_main_screen_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_main_screen_text2"
            android:layout_gravity="center"
            android:layout_below="@+id/help_main_screen_title"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_main_screen_text3"
            android:id="@+id/help_main_screen_text2"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_below="@+id/help_main_screen_text"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_main_screen_text4"
            android:id="@+id/help_main_screen_text3"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_below="@+id/help_main_screen_text2"
            android:layout_marginTop="20dp" />
    </RelativeLayout>
</ScrollView>