<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/pwLayout"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:textSize="14.0sp"
        android:id="@+id/setPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newPw"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:inputType="textPassword"
        android:minWidth="130dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:textSize="14.0sp"
        android:id="@+id/pwConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwConfirm"
        android:layout_below="@+id/newPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:inputType="textPassword"
        android:minWidth="130dp"
        android:layout_alignTop="@+id/pwConfirm"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:id="@+id/email_address"
        android:layout_below="@+id/pwConfirm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/setPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23.0dip"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ffd6d6d6"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_email_address"
        android:layout_alignTop="@+id/email_address"
        android:layout_toEndOf="@+id/setPassword"
        android:minWidth="130dp"
        android:layout_toRightOf="@+id/setPassword"
        android:maxWidth="170dp" />


</RelativeLayout>