<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout"
    android:background="#ffffffff"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/newPersonInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/newPersonInfo" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/nameLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameLabel"
        android:layout_toLeftOf="@+id/personName"
        android:layout_centerVertical="true" />

    <EditText
        android:id="@+id/personName"
        android:padding="2.0dip"
        android:layout_width="150.0dip"
        android:layout_height="30.0dip"
        android:maxLength="10"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/btnSetNewPerson"
        android:layout_alignEnd="@+id/btnSetNewPerson"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/isParentLabel"
        android:padding="15.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isParentLabel"
        android:layout_below="@+id/personName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnSetNewPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29.0dip"
        android:text="@string/addNewPerson"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/isParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15.0dip"
        android:layout_alignBottom="@+id/isParentLabel"
        android:layout_toRightOf="@+id/isParentLabel"
        android:layout_toEndOf="@+id/isParentLabel" />
</RelativeLayout>